<resources>
    <string name="app_name">Team manager BSUIR</string>

    <!-- Strings related to login -->
    <string name="prompt_email">login or email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="repeat_prompt_password">Repeat Password (optional)</string>
    <string name="action_sign_in">Sign in</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_login">Registration</string>

    <string name="error_invalid_login">This login is not valid</string>
    <string name="error_invalid_email">This e-Mail is not valid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_math_password">Passwords do not match</string>
    <string name="error_not_unique_login">This user or email already exists for authorization</string>
    <string name="error_exception_registration">Error when registering</string>
    <string name="error_add_person">Error when adding Person to base</string>
    <string name="error_add_user">Error when User to base</string>
    <string name="error_add_to_base">Error when adding to base</string>

    <string name="menu_delete_item">Remove</string>

    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="title_activity_user_room">UserRoomActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="list_task_empty">List empty\n Click for create.</string>
    <string name="tasks_title_menu_room">Tasks</string>

    <!-- nav bar person -->
    <string name="nav_bar_title_my_task">My Tasks</string>
    <string name="nav_bar_title_done_task">Done Tasks</string>
    <string name="nav_bar_title_current_tasks">Current Tasks</string>
    <string name="nav_bar_title_log_out">Log out</string>

    <string name="date_picker_title">Date:</string>

    <string name="time_picker_title">Time:</string>

    <!-- Person room values -->
    <string name="room_person_photo">user photo</string>
    <string name="room_person_email">email</string>
    <string name="room_person_date_of_birth">Date of Birth</string>
    <string name="room_person_patronymic">Patronymic</string>
    <string name="room_person_name">Name</string>
    <string name="room_person_surname">Surname</string>
    <string name="room_person_mobile_phone">Mobile phone</string>
    <string name="room_person_home_phone">Home Phone</string>
    <string name="room_person_department">Department</string>
    <string name="room_person_post">Post</string>
    <string name="nav_bar_title_create_task">Create Task</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$x task</item>
        <item quantity="other">%1$x tasks</item>
    </plurals>

    <!-- Log Task time-->
    <string name="add_log_time_task">Add</string>
    <string name="update_button">Update</string>
    <string name="description_log_time_task">Description task</string>
    <string name="hours_log_time_task">Hours</string>
    <string name="date_begin_task_fragment">Date begin</string>
    <string name="date_end_task_fragment">Date end</string>
    <string name="show_log_task_fragment">Show log</string>
    <string name="add_log_time_task_fragment">Add Log time</string>
    <string name="add_log_time_message_successfully">Add successfully</string>
    <string name="update_log_time_message_successfully">Update successfully</string>
    <string name="add_log_time_message_failed">Add failed</string>

    <!-- Settings application-->
    <string name="LangDialogTitle">Choose language:</string>
    <string name="LangTitle">Language</string>
    <string name="LangSummary">Language application</string>
    <string name="first_category_settings">First Category</string>
    <string name="choice_language_login">Choice language</string>
    <string name="settings_menu">Settings</string>
    <string name="goto_home_screen_nav_bar">Goto home screen</string>
    <string-array name="entryvalues_lang">
        <item>default</item>
        <item>ru</item>
        <item>en</item>
    </string-array>
    <string-array name="entries_lang">
        <item>Language devices</item>
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <!-- Task -->
    <string name="error_correct">Error correct input data!</string>
    <string name="description_task">Description task</string>
    <string name="name_task">Name Task</string>
    <string name="registration">Registration</string>
    <string name="done">Done</string>
    <string name="value_progress_bar_1_to_100">Value progress bar 0 to 100</string>
    <string name="error_range_value_progress_bar">Error range value 1 to 100!</string>
    <string name="error_date_end">The end date may not be less than the start date.</string>
    <string name="managed_person">Managed person</string>
    <string name="show_persons">Show persons</string>
    <string name="show_users">Show users</string>
    <string name="all_tasks_person">All tasks person</string>
    <string name="add_person_to_task">add person to task</string>
    <string name="more">more</string>
    <string name="confirm_deletion">Confirm deletion!</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="delete_fail">Delete failed</string>

    <string name="error_access_message">Error access</string>
    <string name="post">"Post: "</string>
    <string name="department">"Department: "</string>

    <string name="select_person_edit">Edit Person</string>
    <string name="select_person_delete">Delete Person</string>

    <string name="crash_message">Произошла ошибка. Отправка отчета</string>

</resources>
