<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"/>
    </group>

    <item android:title="@string/tasks_title_menu_room">
        <menu>
            <item
                android:id="@+id/nav_all_tasks_this_person"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_bar_title_my_task"/>
            <item
                android:id="@+id/nav_done_tasks_this_person"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_bar_title_done_task"/>
            <item
                android:id="@+id/nav_current_tasks_this_person"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_bar_title_current_tasks"/>
        </menu>
    </item>

</menu>
