<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="by.bsuir.zavadatar.andrey.teammanagerbsuir.activity.by.bsuir.zavadatar.andrey.teammanagerbsuir.controllers.activity.RegistrationActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/registration_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/activity_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email_or_login"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/repeat_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repeat_prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:layout_marginBottom="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/surname_aut_comp_tv"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/room_person_surname"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/name_aut_comp_tv"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/room_person_name"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"

                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/patronymic_aut_comp_tv"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/room_person_patronymic"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/date_of_birth_btn"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"

                    android:text="@string/room_person_date_of_birth"

                    android:layout_margin="@dimen/room_margin"/>

                <Spinner
                    android:id="@+id/room_content_sex_spin"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"



                    android:layout_margin="@dimen/room_margin"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/room_margin">

                <Spinner
                    android:id="@+id/room_content_country_spin"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"

                    android:visibility="visible"

                    android:layout_margin="@dimen/room_margin"/>

                <Spinner
                    android:id="@+id/room_content_city_spin"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"

                    android:visibility="gone"

                    android:layout_margin="@dimen/room_margin"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email_aut_comp_tv"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/room_person_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:layout_margin="@dimen/room_margin"

                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/mobile_phone_aut_comp_tv"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/room_person_mobile_phone"
                    android:inputType="phone"
                    android:maxLines="1"

                    android:layout_margin="@dimen/room_margin"

                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/home_phone_aut_comp_tv"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/room_person_home_phone"
                    android:inputType="phone"
                    android:maxLines="1"

                    android:layout_margin="@dimen/room_margin"

                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/department_text_view"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="20sp"

                android:layout_margin="@dimen/room_margin"

                android:text="@string/room_person_department"
                />

            <TextView
                android:id="@+id/post_text_view"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="20sp"

                android:layout_margin="@dimen/room_margin"

                android:text="@string/room_person_post"
                />

            <Button
                android:id="@+id/registration_button"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_default_margin"

                android:text="@string/registration"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>